# streaming-stats

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  index-pwa.html  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.pwa.ts  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
docs/: README.md  api.md  architecture.md  components.md  configuration.md  data-flow.md  database.md  rust-backend.md  styling.md  testing.md  utilities.md
public-pwa/: manifest.json  sw.js
src/: App.tsx  PwaApp.test.tsx  PwaApp.tsx  main-pwa.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  models.rs
src/components/: DailyGrowthChart.test.tsx  DailyGrowthChart.tsx  Dashboard.test.tsx  Dashboard.tsx  FollowersPieChart.test.tsx  FollowersPieChart.tsx  GrowthShare.test.tsx  GrowthShare.tsx  KpiRow.test.tsx  KpiRow.tsx  LoginPage.test.tsx  LoginPage.tsx  PlatformCard.test.tsx  PlatformCard.tsx  PlatformDetail.test.tsx  PlatformDetail.tsx  PlatformIcon.test.tsx  PlatformIcon.tsx  Settings.tsx  Setup.tsx  StatsChart.tsx
src/lib/: constants.test.ts  constants.ts  database-web.test.ts  database-web.ts  database.test.ts  database.ts  settings-web.test.ts  settings-web.ts  settings.test.ts  settings.ts  songstats-api.test.ts  songstats-api.ts  songstats-fields.test.ts  songstats-fields.ts  supabase.ts  sync.test.ts  sync.ts  tauri-stubs.ts  types.ts  utils.test.ts  utils.ts
(+4 files in other folders)
