[package]
name = "app"
version = "0.1.0-beta.6"
description = "Cross-platform music streaming stats tracker"
authors = ["Pete Miles"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2.4.2"
tauri-plugin-http = "2.5.7"
tokio = { version = "1.50.0", features = ["time", "rt"] }
reqwest = { version = "0.12", features = ["brotli", "gzip", "deflate"] }
tauri-plugin-shell = "2.3.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
